--- a/ieclub-taro/src/pages/community/index.scss
+++ b/ieclub-taro/src/pages/community/index.scss
@@ -174,7 +174,8 @@
 
         .follow-btn {
           padding: 6px 16px;
-          background: linear-gradient(135deg, #3b82f6 0%, #9333ea 100%);
+          background: -webkit-linear-gradient(135deg, #3b82f6 0%, #9333ea 100%);
+  background: linear-gradient(135deg, #3b82f6 0%, #9333ea 100%);
           border-radius: 16px;
           transition: all 0.3s;
 
