--- a/ieclub-taro/src/styles/mixins.scss
+++ b/ieclub-taro/src/styles/mixins.scss
@@ -44,6 +44,7 @@
 
 // 渐变背景
 @mixin gradient-bg($start, $end, $deg: 135deg) {
+  background: -webkit-linear-gradient($deg, $start 0%, $end 100%);
   background: linear-gradient($deg, $start 0%, $end 100%);
 }
 
